--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "4             no experiment  (weak proof) communication cost           /  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "Name: Distributed Data scenario, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "Name: User scenario, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "Name: PP Method Category, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "Name: Problem, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "Name: ML Method, Length: 119, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "Name: Data, Length: 91, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "Name: Accuracy, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "Name: Efficiency, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "Name: Scalability, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,29 +539,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [DOI, Titles, Authors, Keywords, User scenario, Distributed Data scenario, Privacy/Security, Privacy Statement, PP Method Category, PP Specific Methods, Problem, ML Method, Data, Accuracy, Efficiency, Scalability]\n",
-      "Index: []\n"
+      "                                              DOI  \\\n",
+      "67    http://doi.org/10.1016/j.radonc.2016.10.002   \n",
+      "85      http://doi.org/10.1016/j.ctro.2016.12.004   \n",
+      "193  http://doi.org/10.3233/978-1-61499-852-5-581   \n",
+      "213   http://doi.org/10.1016/j.radonc.2019.11.019   \n",
+      "223             http://doi.org/10.3233/SHTI190246   \n",
+      "\n",
+      "                                                Titles  \\\n",
+      "67   Distributed learning: Developing a predictive ...   \n",
+      "85   Infrastructure and distributed learning method...   \n",
+      "193  Using the Personal Health Train for Automated ...   \n",
+      "213  Distributed learning on 20 000+lung cancer pat...   \n",
+      "223  A Privacy-Preserving Infrastructure for Analyz...   \n",
+      "\n",
+      "                                               Authors  \\\n",
+      "67   Jochems Arthur, Deist Timo M., Van Soest Johan...   \n",
+      "85   Deist Timo M, Jochems A, van Soest Johan, Nalb...   \n",
+      "193  van Soest J, Sun C, Mussmann O, Puts M, van de...   \n",
+      "213  Timo M. Deist, Frank J.W.M. Dankers, Priyanka ...   \n",
+      "223  Chang Sun, Lianne Ippel, Johan van Soest, Birg...   \n",
+      "\n",
+      "                                              Keywords  \\\n",
+      "67   Bayesian networks/Distributed learning/Privacy...   \n",
+      "85   Distributed learning/Support vector machine/De...   \n",
+      "193  Infrastructure/machine learning/data mining/st...   \n",
+      "213  Lung cancer\\nBig data, Distributed learning, F...   \n",
+      "223  Health Information Systems, Data Science, Mach...   \n",
+      "\n",
+      "               User scenario Distributed Data scenario  \\\n",
+      "67                         /              horizontally   \n",
+      "85                         /              horizontally   \n",
+      "193              third party                vertically   \n",
+      "213                        /              horizontally   \n",
+      "223  semi-honest/third party                vertically   \n",
+      "\n",
+      "                      Privacy/Security  \\\n",
+      "67                Very brief statement   \n",
+      "85                Very brief statement   \n",
+      "193               Very brief statement   \n",
+      "213              Not explicitly stated   \n",
+      "223  Privacy definition/proof/analysis   \n",
+      "\n",
+      "                                     Privacy Statement PP Method Category  \\\n",
+      "67                           no data leaving data site       local2center   \n",
+      "85                           no data leaving data site       local2center   \n",
+      "193                         no revealing original data       local2center   \n",
+      "213                                                  /       local2center   \n",
+      "223  1) it can restrict which data elements are ava...       local2center   \n",
+      "\n",
+      "                                   PP Specific Methods         Problem  \\\n",
+      "67   Local Processing by Data Owners/Processing by ...  classification   \n",
+      "85   Local Processing by Data Owners/Processing by ...  classification   \n",
+      "193                                    local to center        Generic    \n",
+      "213                                                  /  classification   \n",
+      "223                                                  /        Generic    \n",
+      "\n",
+      "               ML Method                     Data                  Accuracy  \\\n",
+      "67      bayesian network          real-world data  compare with centralized   \n",
+      "85                   SVM          real-world data  compare with centralized   \n",
+      "193              generic            no experiment             no experiment   \n",
+      "213  logistic regression          real-world data             no comparison   \n",
+      "223    Linear regression  publicly available data             no comparison   \n",
+      "\n",
+      "         Efficiency Scalability  \n",
+      "67   no measurement           /  \n",
+      "85   no measurement           /  \n",
+      "193  no measurement           /  \n",
+      "213  no measurement           /  \n",
+      "223  no measurement           /  \n"
      ]
     }
    ],
    "source": [
     "print(df.loc[df['Authors'].str.contains(\"Dekker\")])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
